Fix icon spacing

--- a/css/main.css
+++ b/css/main.css
@@ -111,3 +111,7 @@ h3.visible-phone {
 footer {
 	margin-top: 30px;
 }
+
+.sm-logo {
+	margin-bottom: 20px;
+}
